<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relax_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.fossify.commons.views.MyAppBarLayout
        android:id="@+id/relax_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/relax_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:title="@string/relax_bedtime"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />

    </org.fossify.commons.views.MyAppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/relax_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/relax_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <org.fossify.commons.views.MyTextView
                android:id="@+id/relax_empty_custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin"
                android:text="@string/relax_empty_custom"
                android:textSize="@dimen/normal_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/relax_add_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/activity_margin"
                android:text="@string/relax_add_favorite" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
