<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timer_alarm_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:keepScreenOn="true">

    <org.fossify.commons.views.MyTextView
        android:id="@+id/timer_alarm_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/reminder_activity_title_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        tools:text="Timer" />

    <org.fossify.commons.views.MyTextView
        android:id="@+id/timer_alarm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/time_expired"
        android:textColor="@color/color_accent"
        android:textSize="@dimen/reminder_activity_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_alarm_label" />

    <org.fossify.commons.views.MyTextView
        android:id="@+id/timer_alarm_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:alpha="0.7"
        android:text="@string/timer_alarm_hint"
        android:textColor="@android:color/white"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toTopOf="@+id/timer_alarm_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/timer_alarm_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:minWidth="220dp"
        android:paddingStart="40dp"
        android:paddingTop="14dp"
        android:paddingEnd="40dp"
        android:paddingBottom="14dp"
        android:text="@string/timer_alarm_close"
        android:textSize="@dimen/bigger_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
