<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sleep_report_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.fossify.commons.views.MyAppBarLayout
        android:id="@+id/sleep_report_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/sleep_report_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:title="@string/sleep_report"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />

    </org.fossify.commons.views.MyAppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sleep_report_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/sleep_report_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <org.fossify.commons.views.MyTextView
                android:id="@+id/sleep_report_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin"
                android:textSize="@dimen/normal_text_size" />

            <org.fossify.commons.views.MyTextView
                android:id="@+id/sleep_report_avg_wake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_margin"
                android:paddingEnd="@dimen/activity_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:textSize="@dimen/normal_text_size" />

            <org.fossify.commons.views.MyTextView
                android:id="@+id/sleep_report_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_margin"
                android:paddingEnd="@dimen/activity_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/sleep_report_note"
                android:textSize="@dimen/smaller_text_size" />

            <org.fossify.commons.views.MyTextView
                android:id="@+id/sleep_report_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin"
                android:text="@string/sleep_report_empty"
                android:textSize="@dimen/normal_text_size" />

            <LinearLayout
                android:id="@+id/sleep_report_records_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
